Ajustes de paginação e inserção de loader.

--- a/front-end/categoria-owme/index.html
+++ b/front-end/categoria-owme/index.html
@@ -66,6 +66,10 @@
 			</div>
 
 			<div id="products">
+
+				<div id="bg-loader">
+					<div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
+				</div>				
 				<ul id="list-products" class="list-products">
 					<li>
 						<div class="cont">
