--- a/front-end/categoria-owme/index.html
+++ b/front-end/categoria-owme/index.html
@@ -7,7 +7,7 @@
     <meta name=viewport content="width=device-width,initial-scale=1">
     <link rel="canonical" href="https://provatecnica.adriano" />
     <title>Prova Técnica para Front-End</title>
-    <link href="project/css/build/style.css" rel="stylesheet"/>
+    <link href="css/style.css" rel="stylesheet"/>
 </head>
 <body>
 	 <header id="header" class="base-content">
@@ -168,6 +168,6 @@
 		</div>
 	</footer>
 
-	<script src="project/js/build/script.min.js"></script>
+	<script src="js/script.min.js"></script>
 </body>
 </html>
