Iniciado os tratamentos da versão responsiva.

--- a/front-end/categoria-owme/index.html
+++ b/front-end/categoria-owme/index.html
@@ -7,30 +7,37 @@
     <meta name=viewport content="width=device-width,initial-scale=1">
     <link rel="canonical" href="https://provatecnica.adriano" />
     <title>Prova Técnica para Front-End</title>
-    <link href="css/style.css" rel="stylesheet"/>
+    <link href="build/css/style.css" rel="stylesheet"/>
 </head>
 <body>
+
 	 <header id="header" class="base-content">
 		 <div class="wrapper">
-			<nav class="nav-menu">
-				<div class="close"><i class="close-black"></i></div>
-				<ul>
-					<li>
-						<a href="javascript:void(0)" class="active" title="Sapatos">SAPATOS</a>
-					</li>
-					<li>
-						<a href="javascript:void(0)" title="Novidade">NOVIDADES</a>
-					</li>
-					<li>
-						<a href="javascript:void(0)" title="Quem Somos">QUEM SOMOS</a>
-					</li>
-					<li>
-						<a href="javascript:void(0)" title="Bazar">BAZAR</a>
-					</li>
-				</ul>
-			</nav>
+        <input type="checkbox" name="" id="menu-control" class="open-menu">
+        <label for="menu-control">
+          <div class="abrir">abre</div>
+          <div class="fechar">fecha</div>
+        </label>
+        <label class="overlay" for="menu-control"></label>
+        <nav class="nav-menu menu">
+          <ul>
+            <li>
+              <a href="javascript:void(0)" class="active" title="Sapatos">SAPATOS</a>
+            </li>
+            <li>
+              <a href="javascript:void(0)" title="Novidade">NOVIDADES</a>
+            </li>
+            <li>
+              <a href="javascript:void(0)" title="Quem Somos">QUEM SOMOS</a>
+            </li>
+            <li>
+              <a href="javascript:void(0)" title="Bazar">BAZAR</a>
+            </li>
+          </ul>
+        </nav>
+
 			<div class="logotipo">
-				<a href="javascrip:void(0)"><img title="Prova Técnica" alt="Prova Técnica" src="project/img/logo.png"></a>
+				<a href="javascrip:void(0)"><img title="Prova Técnica" alt="Prova Técnica" src="img/logo.png"></a>
 			</div>
 			<div class="find-access">
 				<ul>
@@ -168,6 +175,6 @@
 		</div>
 	</footer>
 
-	<script src="js/script.min.js"></script>
+	<script src="build/js/script.min.js"></script>
 </body>
 </html>
