Ajuste de orden. de filtro e adaptação responsiva.

--- a/front-end/categoria-owme/index.html
+++ b/front-end/categoria-owme/index.html
@@ -14,7 +14,7 @@
 	 <header id="header" class="base-content">
 		 <div class="wrapper">
         <input type="checkbox" name="" id="menu-control" class="open-menu">
-        <label for="menu-control">
+        <label for="menu-control" class="action-menu">
           <div class="abrir">abre</div>
           <div class="fechar">fecha</div>
         </label>
@@ -63,8 +63,8 @@
 				<div class="filter-list">
 					<div class="form-group">
 						<select id="change-filter" onchange="getStartListProd(this.value,1);">
-							<option value="valor-desc"> Maior Valor</option>
-							<option value="valor-asc"> Menor Valor</option>
+							<option value="price-desc"> Maior Valor</option>
+							<option value="price-asc"> Menor Valor</option>
 							<option value="name-asc"> A-Z</option>
 							<option value="name-desc"> Z-A</option>
 						</select>
